fixing widget core blocks and left align buttons and comments and form fields and selects

--- a/client-assets/client.scss
+++ b/client-assets/client.scss
@@ -1128,11 +1128,11 @@ p.wp-block-subhead,
 .entry-content ol li,
 .editor-styles-wrapper .editor-rich-text ol li,
 .entry-content
-  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers)
+  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers):not(.wp-block-archives)
   li,
 .editor-styles-wrapper
   .editor-rich-text
-  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers)
+  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers):not(.wp-block-archives)
   li {
   margin: 15px 0px;
 }
